Update page limit on latex.

--- a/author-kit/tutorial.tex
+++ b/author-kit/tutorial.tex
@@ -9,7 +9,7 @@
 
 % to compile a preprint version, e.g., for submission to arXiv, add add the
 % [preprint] option:
-    \usepackage[preprint,nonatbib]{neurips_2020}
+    \usepackage[preprint,nonatbib]{neurips2020_preregistration}
 
 % to compile a camera-ready version, add the [final] option, e.g.:
 %     \usepackage[final]{neurips_2020}
@@ -177,7 +177,8 @@ After the proposal paper has been reviewed and accepted, the authors will upload
 
 %\begin{description}
 %\item[Full]
-The \textbf{proposal paper} should not exceed \emph{five} pages (\emph{excluding} references).
+The \textbf{proposal paper} should not exceed \emph{five} pages (\emph{excluding} references),
+although we recommend four pages based on the dual submission policy for some conferences such as CVPR.
 There will be no strict limit for the \textbf{results paper}, but as a guideline we suggest two to four pages.
 
 %\item[Short] The \textbf{proposal paper} should not exceed \emph{three} pages (\emph{including} references).  The combined proposal paper and results paper should not exceed four pages (\emph{including} references).
