Update page limit.

--- a/author-kit/tutorial.tex
+++ b/author-kit/tutorial.tex
@@ -177,8 +177,8 @@ After the proposal paper has been reviewed and accepted, the authors will upload
 
 %\begin{description}
 %\item[Full]
-The \textbf{proposal paper} should not exceed \emph{five} pages (\emph{excluding} references),
-although we recommend four pages based on the dual submission policy for some conferences such as CVPR.
+We recommend 4 pages, but we allow up to 5 pages (\emph{excluding} references) for the \textbf{proposal paper}. Note that, for some venues, only papers up to 4 pages (without references) are not considered as 'prior submission', see e.g. CVPR (\url{http://cvpr2020.thecvf.com/submission/main-conference/author-guidelines}). For others, e.g. NeurIPS (\url{https://neurips.cc/Conferences/2020/PaperInformation/NeurIPS-FAQ}), non-archival workshops like ours do not count as dual submissions.
+
 There will be no strict limit for the \textbf{results paper}, but as a guideline we suggest two to four pages.
 
 %\item[Short] The \textbf{proposal paper} should not exceed \emph{three} pages (\emph{including} references).  The combined proposal paper and results paper should not exceed four pages (\emph{including} references).
